[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/breakfastdecision.png" type="Texture" id=2]
[ext_resource path="res://Game/GUI/TextLeft.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Scripts/Openning.gd" type="Script" id=4]
[ext_resource path="res://Game/GUI/DecisionButton.tscn" type="PackedScene" id=6]

[node name="Openning" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="TextLeft" parent="." instance=ExtResource( 3 )]

[node name="Decisions" type="GridContainer" parent="."]
margin_left = 160.0
margin_top = 288.0
margin_right = 960.0
margin_bottom = 642.0
size_flags_horizontal = 2
custom_constants/vseparation = 60
custom_constants/hseparation = 60
columns = 2

[node name="Healthy" parent="Decisions" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_right = 385.0
size_flags_horizontal = 3
text = "Healthy"

[node name="Unhealthy" parent="Decisions" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_left = 445.0
margin_right = 830.0
size_flags_horizontal = 3
text = "Unhealthy"

[node name="Skip" parent="Decisions" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 222.0
margin_right = 385.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "Skip"

[node name="Alcohol" parent="Decisions" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_left = 445.0
margin_top = 222.0
margin_right = 830.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "Alcohol"

[connection signal="pressed" from="TextLeft/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Decisions/Healthy" to="." method="_on_Breakfast_pressed" binds= [ "Healthy" ]]
[connection signal="pressed" from="Decisions/Unhealthy" to="." method="_on_Breakfast_pressed" binds= [ "Unhealthy" ]]
[connection signal="pressed" from="Decisions/Skip" to="." method="_on_Breakfast_pressed" binds= [ "Skip" ]]
[connection signal="pressed" from="Decisions/Alcohol" to="." method="_on_Breakfast_pressed" binds= [ "Alcohol" ]]

[editable path="TextLeft"]
